--- a/Experimentascript.html
+++ b/Experimentascript.html
@@ -3,8 +3,7 @@
     <script type="text/javascript" src="Experimentascript.js"></script>
   </head>
   <body>
-    <input id="repl-input" />
-    <button id="eval-button">Eval</button>
+    <input id="repl-input" style="width: 100%; height: 30px;" />
     <pre id="repl-log">      
     </pre>
   </body>
